# oasys

./: .clang-format  .gitignore  CMakeLists.txt
boot/: CMakeLists.txt  boot.c  data.c
boot/targets/: aa64.efi.llvm.cmake  x64.efi.gnu.cmake  x64.efi.llvm.cmake
include/oasys/: oasys.h.in
scripts/: OaSYS.BOOT.EFI.PACK.cmake  OaSYS.BOOT.EFI.cmake  OaSYS.BOOT.PACK.cmake  OaSYS.BOOT.cmake  OaSYS.cmake
