set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_C_COMPILER   x86_64-w64-mingw32-gcc)
set(CMAKE_ASM_COMPILER x86_64-w64-mingw32-gcc)

set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)

ADD_EXECUTABLE(BOOTX64.EFI data.c boot.c)

TARGET_INCLUDE_DIRECTORIES(BOOTX64.EFI PUBLIC include)
TARGET_INCLUDE_DIRECTORIES(BOOTX64.EFI PUBLIC include/x86_64)
TARGET_INCLUDE_DIRECTORIES(BOOTX64.EFI PUBLIC include/protocol)

TARGET_COMPILE_OPTIONS(BOOTX64.EFI PRIVATE -ffreestanding)
TARGET_LINK_OPTIONS(BOOTX64.EFI PRIVATE -nostdlib -Wl,-dll -shared -Wl,--subsystem,10 -e efi_main)
