INCLUDE(targets/${CONFIG_ARCH}.efi.${CONFIG_TOOLCHAIN}.cmake)
SET(EFI_BOOT_IMAGE_FILENAME boot${CONFIG_ARCH}.efi)

ADD_EXECUTABLE(${EFI_BOOT_IMAGE_FILENAME} data.c boot.c)

TARGET_COMPILE_OPTIONS(${EFI_BOOT_IMAGE_FILENAME} PRIVATE ${CMAKE_COMPILE_OPTIONS})
TARGET_LINK_OPTIONS(${EFI_BOOT_IMAGE_FILENAME} PRIVATE ${CMAKE_LINK_OPTIONS})
